<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingEnd="24dp"
    tools:context=".HikeActivity">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_name" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_name_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:padding="4dp" />

    <TextView
        android:id="@+id/txt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_location" />

    <EditText
        android:id="@+id/edt_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_location_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:padding="4dp" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_date" />

    <TextView
        android:id="@+id/edt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_edit_text"
        android:hint="@string/string_date_hint"
        android:imeOptions="actionNext"
        android:inputType="date"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:padding="8dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/txt_parking"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/string_parking"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:buttonTint="@color/blue"
                android:checked="true"
                android:text="@string/string_yes" />

            <RadioButton
                android:id="@+id/radio_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/blue"
                android:text="@string/string_no" />
        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/txt_length"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="4dp"
            android:gravity="center_vertical"
            android:text="@string/string_length"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_length"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/bg_edit_text"
            android:gravity="end"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:padding="4dp" />

        <TextView
            android:id="@+id/txt_level"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/string_level"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/string_description" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/bg_edit_text"
        android:gravity="top|start"
        android:hint="@string/string_description_hint"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lines="3"
        android:padding="8dp" />

</androidx.appcompat.widget.LinearLayoutCompat>